# gym_management

./: README.md  pyproject.toml
gym_management/: hooks.py  patches.txt
gym_management/api/: mobile.py
gym_management/fixtures/: role.json
gym_management/gym_management/doctype/attendance_log/: attendance_log.json  attendance_log.py
gym_management/gym_management/doctype/gym_member/: gym_member.json  gym_member.py
gym_management/gym_management/doctype/gym_membership/: gym_membership.json  gym_membership.py
gym_management/gym_management/doctype/gym_settings/: gym_settings.json  gym_settings.py
gym_management/gym_management/doctype/gym_trainer/: gym_trainer.json  gym_trainer.py
gym_management/gym_management/doctype/membership_plan/: membership_plan.json  membership_plan.py
gym_management/gym_management/report/active_members/: active_members.js  active_members.json  active_members.py
gym_management/gym_management/workspace/gym_management/: gym_management.json
gym_management/patches/v1_0/: rename_checkin_coord_fields.py
gym_management/public/gym_pwa/: manifest.webmanifest  sw.js
gym_management/public/gym_pwa/css/: app.css
gym_management/public/gym_pwa/js/: app.js
gym_management/public/js/: attendance_log.js  gym_geo.js  gym_member.js
gym_management/www/: gym_app.html  gym_app.py
