[project]
name = "gym_management"
authors = [{ name = "Tejas", email = "hello@tejas.com" }]
description = "Gym management: members, plans, memberships, attendance"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[tool.flit.module]
name = "gym_management"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
